--- a/.travis.yml
+++ b/.travis.yml
@@ -73,10 +73,10 @@ matrix:
       language: objective-c
       env:
         - MB_PYTHON_VERSION=2.7
-    - os: osx
-      language: objective-c
-      env:
-        - MB_PYTHON_VERSION=3.4
+#     - os: osx
+#       language: objective-c
+#       env:
+#         - MB_PYTHON_VERSION=3.4
     - os: osx
       language: objective-c
       env:
