--- a/appveyor.yml
+++ b/appveyor.yml
@@ -106,7 +106,7 @@ install:
 
   # Upgrade to the latest version of pip to avoid it displaying warnings
   # about it being out of date.
-  - "python -m pip install --upgrade pip"
+  - "python -m pip install --disable-pip-version-check --upgrade 'pip<21.0'"
 
   - "powershell appveyor\\install.ps1"
 
