test: do not fail fast on CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ jobs:
   build_wheels:
     name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
+    fail-fast: false
     strategy:
       matrix:
         # windows is tested on azure for now
