--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
         name: Install Python
 
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==1.8.0
+        run: python -m pip install cibuildwheel==1.8.0 requests
 
       - name: Build and test wheels
         run: python -m cibuildwheel --output-dir wheelhouse
