--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,11 +34,18 @@ jobs:
         name: Install Python
 
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==1.8.0 requests
+        run: python -m pip install cibuildwheel==1.8.0
+
+      - name: Get versions
+        id: version
+        run: |
+          echo "::set-output name=glpk_version::$(python scripts/find_newest_glpk_release.py)"
+          echo "::set-output name=swigplk_version::$(python scripts/find_swiglpk_version.py)"
 
       - name: Build and test wheels
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
+          NEW_GLPK_VERSION: ${{ steps.version.outputs.glpk_version }}
           # install swig before build in each python environment
           # each job runs a python environment so this is equivalent to CIBW_BEFORE_ALL
           CIBW_BEFORE_BUILD_LINUX: source {project}/config.sh && pre_build
