--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         # windows is tested on azure for now
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-10.15]
         python: [27, 36, 37, 38, 39]
         manylinux_image: [manylinux1, manylinux2010]
         include:
@@ -19,12 +19,12 @@ jobs:
             platform_id: manylinux_x86_64
           - os: ubuntu-latest
             platform_id: manylinux_i686
-          - os: macos-latest
+          - os: macos-10.15
             platform_id: macosx_x86_64
         exclude:
           # Remove manylinux1 from the osx build matrix since
           # manylinux_image is not used for these platforms
-          - os: macos-latest
+          - os: macos-10.15
             manylinux_image: manylinux1
 
     steps:
