--- a/.travis.yml
+++ b/.travis.yml
@@ -68,26 +68,26 @@ jobs:
       env:
         - MB_PYTHON_VERSION=3.9
         - PLAT=i686
-    - os: osx
-      language: objective-c
-      env:
-        - MB_PYTHON_VERSION=2.7
-    - os: osx
-      language: objective-c
-      env:
-        - MB_PYTHON_VERSION=3.6
-    - os: osx
-      language: objective-c
-      env:
-        - MB_PYTHON_VERSION=3.7
-    - os: osx
-      language: objective-c
-      env:
-        - MB_PYTHON_VERSION=3.8
-    - os: osx
-      language: objective-c
-      env:
-        - MB_PYTHON_VERSION=3.9
+    # - os: osx
+    #   language: objective-c
+    #   env:
+    #     - MB_PYTHON_VERSION=2.7
+    # - os: osx
+    #   language: objective-c
+    #   env:
+    #     - MB_PYTHON_VERSION=3.6
+    # - os: osx
+    #   language: objective-c
+    #   env:
+    #     - MB_PYTHON_VERSION=3.7
+    # - os: osx
+    #   language: objective-c
+    #   env:
+    #     - MB_PYTHON_VERSION=3.8
+    # - os: osx
+    #   language: objective-c
+    #   env:
+    #     - MB_PYTHON_VERSION=3.9
 
 before_install:
   - pip install -r requirements_ci.txt
