--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
           NEW_GLPK_VERSION: ${{ steps.version.outputs.glpk_version }}
-          GLPK_HEADER_PATH: glpk-${{ steps.version.outputs.glpk_version }}/src/glpk.h
+          GLPK_HEADER_PATH: glpk-${{ steps.version.outputs.glpk_version }}/src
           # install swig before build in each python environment
           # each job runs a python environment so this is equivalent to CIBW_BEFORE_ALL
           CIBW_BEFORE_BUILD_LINUX: source {project}/config.sh && pre_build
