--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,20 @@
 name: Build
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+    - master
+    - devel
+    tags:
+    - '[0-9]+.[0-9]+.[0-9]+[.0-9ab]*'
+  pull_request:
+    branches:
+    - master
+    - devel
+  schedule:
+  # https://crontab.guru/#0_8_*_*_1
+  - cron: '0 8 * * 1'
+
 
 jobs:
   build_wheels:
@@ -68,7 +82,7 @@ jobs:
     needs: build_wheels
     runs-on: ubuntu-latest
     # upload to PyPI on every tag starting with 'v'
-    if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
+    if: startsWith(github.ref, 'refs/tags')
     # alternatively, to publish when a GitHub Release is created, use the following rule:
     # if: github.event_name == 'release' && github.event.action == 'published'
     steps:
