--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         # windows is tested on azure for now
-        os: [ubuntu-latest, macos-10.15]
+        os: [ubuntu-latest, macos-10.15, windows-latest]
         python: [27, 36, 37, 38, 39]
         manylinux_image: [manylinux1, manylinux2010]
         include:
@@ -21,10 +21,16 @@ jobs:
             platform_id: manylinux_i686
           - os: macos-10.15
             platform_id: macosx_x86_64
+          - os: windows-latest
+            platform_id: win_amd64
+          - os: windows-latest
+            platform_id: win32
         exclude:
           # Remove manylinux1 from the osx build matrix since
           # manylinux_image is not used for these platforms
           - os: macos-10.15
+            manylinux_image: manylinux1
+          - os: windows-latest
             manylinux_image: manylinux1
 
     steps:
@@ -52,6 +58,7 @@ jobs:
           # each job runs a python environment so this is equivalent to CIBW_BEFORE_ALL
           CIBW_BEFORE_BUILD_LINUX: source {project}/config.sh && pre_build
           CIBW_BEFORE_BUILD_MACOS: source {project}/config.sh && IS_OSX=true pre_build
+          CIBW_BEFORE_BUILD_WINDOWS: python appveyor/build_glpk.py && choco install swig
           CIBW_BUILD: cp${{ matrix.python }}-${{ matrix.platform_id }}
           # install before tests
           CIBW_TEST_COMMAND: cp {project}/test_swiglpk.py . && python test_swiglpk.py
