--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,8 @@ jobs:
       fail-fast: false
       matrix:
         # windows is tested on azure for now
-        os: [windows-latest]
-        python: [27, 38] # [27, 36, 37, 38, 39]
+        os: [ubuntu-latest, macos-10.15, windows-latest]
+        python: [27, 36, 37, 38, 39]
         manylinux_image: [manylinux1, manylinux2010]
         include:
           # Run 32 and 64 bit version in parallel for Linux and Windows
