--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,32 +12,15 @@ jobs:
         # windows is tested on azure for now
         os: [ubuntu-latest, macos-10.15, windows-latest]
         python: [27, 36, 37, 38, 39]
-        manylinux_image: [manylinux1, manylinux2010]
-        include:
-          # Run 32 and 64 bit version in parallel for Linux and Windows
-          - os: ubuntu-latest
-            platform_id: manylinux_x86_64
-          - os: ubuntu-latest
-            platform_id: manylinux_i686
-          - os: macos-10.15
-            platform_id: macosx_x86_64
-          - os: windows-latest
-            platform_id: win_amd64
-          - os: windows-latest
-            platform_id: win32
-        exclude:
-          # Remove manylinux1 from the osx build matrix since
-          # manylinux_image is not used for these platforms
-          - os: macos-10.15
-            manylinux_image: manylinux1
-          - os: windows-latest
-            manylinux_image: manylinux1
-
     steps:
       - uses: actions/checkout@v2
 
       - uses: actions/setup-python@v2
         name: Install Python
+
+      - name: Install Visual C++ for Python 2.7
+        if: runner.os == 'Windows'
+        run: choco install vcpython27 -f -y
 
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==1.8.0
@@ -59,7 +42,6 @@ jobs:
           CIBW_BEFORE_BUILD_LINUX: source {project}/config.sh && pre_build
           CIBW_BEFORE_BUILD_MACOS: source {project}/config.sh && IS_OSX=true pre_build
           CIBW_BEFORE_BUILD_WINDOWS: choco install swig vcpython27 && python appveyor/build_glpk.py
-          CIBW_BUILD: cp${{ matrix.python }}-${{ matrix.platform_id }}
           # install before tests
           CIBW_TEST_COMMAND: cp {project}/test_swiglpk.py . && python test_swiglpk.py
           CIBW_MANYLINUX_X86_64_IMAGE: ${{ matrix.manylinux_image }}
