--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,14 +4,13 @@ on: [push, pull_request]
 
 jobs:
   build_wheels:
-    name: Build wheels on ${{ matrix.os }}/${{ matrix.python }}
+    name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         # windows is tested on azure for now
-        os: [ubuntu-latest, macos-10.15, windows-latest]
-        python: [27, 36, 37, 38, 39]
+        os: [ubuntu-20.04, windows-2019, macos-10.15]
     steps:
       - uses: actions/checkout@v2
 
@@ -32,8 +31,8 @@ jobs:
           echo "::set-output name=glpk_version::$(python scripts/find_newest_glpk_release.py)"
           echo "::set-output name=swigplk_version::$(python scripts/find_swiglpk_version.py)"
 
-      - name: Build and test wheels
-        run: python -m cibuildwheel --output-dir wheelhouse
+      - name: Build wheels
+        uses: joerick/cibuildwheel@v1.10.0
         env:
           NEW_GLPK_VERSION: ${{ steps.version.outputs.glpk_version }}
           GLPK_HEADER_PATH: glpk-${{ steps.version.outputs.glpk_version }}/src
