--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,9 +17,9 @@ jobs:
       - uses: actions/setup-python@v2
         name: Install Python
 
-      - name: Install Visual C++ for Python 2.7
+      - name: Install Visual C++ for Python 2.7 and SWIG
         if: runner.os == 'Windows'
-        run: choco install vcpython27 -f -y
+        run: choco install vcpython27 swig -f -y
 
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==1.8.0
@@ -40,11 +40,9 @@ jobs:
           # each job runs a python environment so this is equivalent to CIBW_BEFORE_ALL
           CIBW_BEFORE_BUILD_LINUX: source {project}/config.sh && pre_build
           CIBW_BEFORE_BUILD_MACOS: source {project}/config.sh && IS_OSX=true pre_build
-          CIBW_BEFORE_BUILD_WINDOWS: choco install swig vcpython27 && python appveyor/build_glpk.py
+          CIBW_BEFORE_BUILD_WINDOWS: python appveyor/build_glpk.py
           # install before tests
           CIBW_TEST_COMMAND: cp {project}/test_swiglpk.py . && python test_swiglpk.py
-          CIBW_MANYLINUX_X86_64_IMAGE: ${{ matrix.manylinux_image }}
-          CIBW_MANYLINUX_I686_IMAGE: ${{ matrix.manylinux_image }}
 
       - uses: actions/upload-artifact@v2
         with:
