--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
           # each job runs a python environment so this is equivalent to CIBW_BEFORE_ALL
           CIBW_BEFORE_BUILD_LINUX: source {project}/config.sh && pre_build
           CIBW_BEFORE_BUILD_MACOS: source {project}/config.sh && IS_OSX=true pre_build
-          CIBW_BEFORE_BUILD_WINDOWS: python appveyor/build_glpk.py
+          CIBW_BEFORE_BUILD_WINDOWS: rm -rf glpk_build && python appveyor/build_glpk.py
           CIBW_SKIP: cp27-win_amd64 cp35*
           # install before tests
           CIBW_TEST_COMMAND: cp {project}/test_swiglpk.py . && python test_swiglpk.py
