--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Install Visual C++ for Python 2.7 and SWIG
         if: runner.os == 'Windows'
-        run: choco install vcpython27 swig -f -y
+        run: choco install swig -f -y
 
       - name: Get versions
         id: version
@@ -40,7 +40,7 @@ jobs:
           echo "::set-output name=swigplk_version::$(python scripts/find_swiglpk_version.py)"
 
       - name: Build wheels
-        uses: joerick/cibuildwheel@v1.10.0
+        uses: joerick/cibuildwheel@v2.3.1
         env:
           NEW_GLPK_VERSION: ${{ steps.version.outputs.glpk_version }}
           GLPK_HEADER_PATH: glpk-${{ steps.version.outputs.glpk_version }}/src
@@ -49,7 +49,7 @@ jobs:
           CIBW_BEFORE_BUILD_LINUX: source {project}/config.sh && pre_build
           CIBW_BEFORE_BUILD_MACOS: source {project}/config.sh && IS_OSX=true pre_build
           CIBW_BEFORE_BUILD_WINDOWS: rm -rf glpk_build && python scripts/build_glpk.py
-          CIBW_SKIP: cp35* pp*-win*
+          CIBW_SKIP: pp*-win*
           # install before tests
           CIBW_TEST_COMMAND: cp {project}/test_swiglpk.py . && python test_swiglpk.py
 
@@ -69,7 +69,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: 3.9
     - name: Get versions
       id: version
       run: |
