--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
           GLPK_HEADER_PATH: glpk-${{ steps.version.outputs.glpk_version }}/src
           # install swig before build in each python environment
           # each job runs a python environment so this is equivalent to CIBW_BEFORE_ALL
-          CIBW_BEFORE_BUILD_LINUX: source {project}/config.sh && pre_build
+          CIBW_BEFORE_BUILD_LINUX: source {project}/config.sh && pre_build && export GLPK_HEADER_PATH=/include
           CIBW_BEFORE_BUILD_MACOS: source {project}/config.sh && IS_OSX=true pre_build
           CIBW_BEFORE_BUILD_WINDOWS: rm -rf glpk_build && python scripts/build_glpk.py
           CIBW_SKIP: pp*-win*
