--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
         uses: joerick/cibuildwheel@v2.3.1
         env:
           NEW_GLPK_VERSION: ${{ steps.version.outputs.glpk_version }}
-          GLPK_HEADER_PATH: /project/glpk-${{ steps.version.outputs.glpk_version }}/src
+          CIBW_ENVIRONMENT_LINUX: GLPK_HEADER_PATH=/include
           # install swig before build in each python environment
           # each job runs a python environment so this is equivalent to CIBW_BEFORE_ALL
           CIBW_BEFORE_BUILD_LINUX: source {project}/config.sh && pre_build
