--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,13 +44,16 @@ jobs:
         uses: joerick/cibuildwheel@v2.3.1
         env:
           NEW_GLPK_VERSION: ${{ steps.version.outputs.glpk_version }}
+          GLPK_HEADER_PATH: glpk-${{ steps.version.outputs.glpk_version }}/src
           CIBW_ENVIRONMENT_LINUX: GLPK_HEADER_PATH=/include
           # install swig before build in each python environment
           # each job runs a python environment so this is equivalent to CIBW_BEFORE_ALL
           CIBW_BEFORE_BUILD_LINUX: source {project}/config.sh && pre_build
           CIBW_BEFORE_BUILD_MACOS: source {project}/config.sh && IS_OSX=true pre_build
           CIBW_BEFORE_BUILD_WINDOWS: rm -rf glpk_build && python scripts/build_glpk.py
-          CIBW_SKIP: pp*-win*
+          CIBW_ARCHS_MACOS: "x86_64 universal2 arm64"
+          CIBW_ARCHS_LINUX: "auto aarch64"
+          CIBW_SKIP: pp*-win* *-musllinux*
           # install before tests
           CIBW_TEST_COMMAND: cp {project}/test_swiglpk.py . && python test_swiglpk.py
 
