--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Install Visual C++ for Python 2.7 and SWIG
+      - name: Install SWIG
         if: runner.os == 'Windows'
         run: choco install swig -f -y
+
+      - name: Set up QEMU
+        if: runner.os == 'Linux'
+        uses: docker/setup-qemu-action@v1
+        with:
+          platforms: all
 
       - name: Get versions
         id: version
@@ -44,12 +50,15 @@ jobs:
         env:
           NEW_GLPK_VERSION: ${{ steps.version.outputs.glpk_version }}
           GLPK_HEADER_PATH: glpk-${{ steps.version.outputs.glpk_version }}/src
+          CIBW_ENVIRONMENT_LINUX: GLPK_HEADER_PATH=/include
           # install swig before build in each python environment
           # each job runs a python environment so this is equivalent to CIBW_BEFORE_ALL
           CIBW_BEFORE_BUILD_LINUX: source {project}/config.sh && pre_build
           CIBW_BEFORE_BUILD_MACOS: source {project}/config.sh && IS_OSX=true pre_build
           CIBW_BEFORE_BUILD_WINDOWS: rm -rf glpk_build && python scripts/build_glpk.py
-          CIBW_SKIP: pp*-win*
+          CIBW_ARCHS_MACOS: "x86_64"  # GLPK will not compile on silicon
+          CIBW_ARCHS_LINUX: "auto"
+          CIBW_SKIP: pp*-win* *-musllinux*
           # install before tests
           CIBW_TEST_COMMAND: cp {project}/test_swiglpk.py . && python test_swiglpk.py
 
