--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,6 +66,9 @@ jobs:
 
       - name: Add source distribution
         if: runner.os == 'macOS'
+        env:
+          NEW_GLPK_VERSION: ${{ steps.version.outputs.glpk_version }}
+          GLPK_HEADER_PATH: glpk-${{ steps.version.outputs.glpk_version }}/src
         run: |
           source config.sh && IS_OSX=true pre_build
           python setup.py sdist --dist-dir=./wheelhouse
