--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,20 +64,46 @@ jobs:
           CIBW_TEST_COMMAND: cp {project}/test_swiglpk.py . && python test_swiglpk.py
           CIBW_TEST_SKIP: "*_arm64"
 
-      - name: Add source distribution
-        if: runner.os == 'macOS'
-        env:
-          NEW_GLPK_VERSION: ${{ steps.version.outputs.glpk_version }}
-          GLPK_HEADER_PATH: glpk-${{ steps.version.outputs.glpk_version }}/src
+      - uses: actions/upload-artifact@v2
+        name: wheels
+        with:
+          path: ./wheelhouse/*.whl
+
+  build_sdist:
+    name: Build the source distribution
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-python@v3
+        with:
+          python-version: '3.9'
+
+      - name: Get GLPK version
+        id: version
         run: |
-          source config.sh && IS_OSX=true pre_build
-          python setup.py sdist --dist-dir=./wheelhouse
+          python -m pip install requests
+          echo "::set-output name=glpk_version::$(python scripts/find_newest_glpk_release.py)"
+
+      - name: Install systems dependencies
+        run: sudo apt install libgmp-dev swig wget
+
+      - name: Download and unpack GLPK
+        env:
+          NEW_GLPK_VERSION: ${{ github.glpk_version }}
+        run: |
+          wget "http://ftp.gnu.org/gnu/glpk/glpk-$NEW_GLPK_VERSION.tar.gz"
+          tar -xf glpk-$NEW_GLPK_VERSION.tar.gz
+
+      - name: Build source distribution
+        env:
+          NEW_GLPK_VERSION: ${{ github.glpk_version }}
+        run: GLPK_HEADER_PATH=$NEW_GLPK_VERSION/src setup.py sdist --dist-dir=./wheelhouse
 
       - uses: actions/upload-artifact@v2
+        name: sdist
         with:
-          path: |
-            ./wheelhouse/*.whl
-            ./wheelhouse/*.tar.gz
+          path: ./wheelhouse/*.tar.gz
 
   deploy:
     name: Release to Github and deploy to PyPI
@@ -88,23 +114,30 @@ jobs:
     # if: github.event_name == 'release' && github.event.action == 'published'
     steps:
     - uses: actions/checkout@v3
+
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
         python-version: 3.9
+
     - name: Get versions
       id: version
       run: |
         python -m pip install requests
         echo "::set-output name=glpk_version::$(python scripts/find_newest_glpk_release.py)"
         echo "::set-output name=swigplk_version::$(python scripts/find_swiglpk_version.py)"
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
         python -m pip install twine
     - uses: actions/download-artifact@v2
       with:
-        name: artifact
+        name: wheel
+        path: wheelhouse
+    - uses: actions/download-artifact@v2
+      with:
+        name: sdist
         path: wheelhouse
 
     - name: Publish to PyPI
