--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,7 +98,7 @@ jobs:
       - name: Build source distribution
         env:
           NEW_GLPK_VERSION: ${{ steps.version.outputs.glpk_version}}
-        run: GLPK_HEADER_PATH=$NEW_GLPK_VERSION/src python setup.py sdist --dist-dir=./wheelhouse
+        run: GLPK_HEADER_PATH=glpk-$NEW_GLPK_VERSION/src python setup.py sdist --dist-dir=./wheelhouse
 
       - uses: actions/upload-artifact@v2
         name: sdist
@@ -107,7 +107,7 @@ jobs:
 
   deploy:
     name: Release to Github and deploy to PyPI
-    needs: build_wheels
+    needs: [build_wheels, build_sdist]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags')
     # alternatively, to publish when a GitHub Release is created, use the following rule:
