--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,35 +65,79 @@ jobs:
           CIBW_TEST_SKIP: "*_arm64"
 
       - uses: actions/upload-artifact@v2
+        name: wheels
         with:
           path: ./wheelhouse/*.whl
 
+  build_sdist:
+    name: Build the source distribution
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-python@v3
+        with:
+          python-version: '3.9'
+
+      - name: Get GLPK version
+        id: version
+        run: |
+          python -m pip install requests
+          echo "::set-output name=glpk_version::$(python scripts/find_newest_glpk_release.py)"
+
+      - name: Install systems dependencies
+        run: sudo apt install libgmp-dev swig wget
+
+      - name: Download and unpack GLPK
+        env:
+          NEW_GLPK_VERSION: ${{ steps.version.outputs.glpk_version }}
+        run: |
+          wget "http://ftp.gnu.org/gnu/glpk/glpk-$NEW_GLPK_VERSION.tar.gz"
+          tar -xf glpk-$NEW_GLPK_VERSION.tar.gz
+
+      - name: Build source distribution
+        env:
+          NEW_GLPK_VERSION: ${{ steps.version.outputs.glpk_version}}
+        run: GLPK_HEADER_PATH=glpk-$NEW_GLPK_VERSION/src python setup.py sdist --dist-dir=./wheelhouse
+
+      - uses: actions/upload-artifact@v2
+        name: sdist
+        with:
+          path: ./wheelhouse/*.tar.gz
+
   deploy:
     name: Release to Github and deploy to PyPI
-    needs: build_wheels
+    needs: [build_wheels, build_sdist]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags')
     # alternatively, to publish when a GitHub Release is created, use the following rule:
     # if: github.event_name == 'release' && github.event.action == 'published'
     steps:
     - uses: actions/checkout@v3
+
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
         python-version: 3.9
+
     - name: Get versions
       id: version
       run: |
         python -m pip install requests
         echo "::set-output name=glpk_version::$(python scripts/find_newest_glpk_release.py)"
         echo "::set-output name=swigplk_version::$(python scripts/find_swiglpk_version.py)"
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
         python -m pip install twine
     - uses: actions/download-artifact@v2
       with:
-        name: artifact
+        name: wheel
+        path: wheelhouse
+    - uses: actions/download-artifact@v2
+      with:
+        name: sdist
         path: wheelhouse
 
     - name: Publish to PyPI
@@ -102,6 +146,7 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run:
         twine upload --skip-existing --non-interactive ./wheelhouse/*
+
     - name: Create GitHub release
       uses: actions/create-release@v1
       if: steps.version.outputs.glpk_version != steps.version.outputs.swigplk_version
