--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,6 +67,7 @@ jobs:
       - uses: actions/upload-artifact@v3
         name: wheels
         with:
+          name: wheels
           path: ./wheelhouse/*.whl
 
   build_sdist:
@@ -103,6 +104,7 @@ jobs:
       - uses: actions/upload-artifact@v3
         name: sdist
         with:
+          name: sdist
           path: ./wheelhouse/*.tar.gz
 
   deploy:
