--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -49,7 +49,7 @@ jobs:
           # each job runs a python environment so this is equivalent to CIBW_BEFORE_ALL
           CIBW_BEFORE_BUILD_LINUX: source {project}/config.sh && pre_build
           CIBW_BEFORE_BUILD_MACOS: source {project}/config.sh && IS_OSX=true pre_build
-          CIBW_BEFORE_BUILD_WINDOWS: rm -rf glpk_build && python -m pip install setuptools && python scripts/build_glpk.py
+          CIBW_BEFORE_BUILD_WINDOWS: rm -rf glpk_build && python -m pip install 'setuptools>=74.1.1' && python scripts/build_glpk.py
           CIBW_ARCHS_MACOS: "arm64 x86_64"
           CIBW_ARCHS_LINUX: "auto aarch64"
           CIBW_SKIP: pp* *-musllinux* cp36-* cp37-*
